infrastructure/k8s/manifests/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - port: 9999
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          # 🚀 Registry Local de Cube Path
          image: localhost:5000/backend:latest
          ports:
            - containerPort: 9999
